# cellfree

./: .bandit  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main-updated.yaml  python-check.yaml
cellfree/: plot.py  summary.py
cellfree/algorithm/: annotate_phase_snv_v3.py  bam.py  cal_frag_length.py  end_motif.py  get_end_motif.py
cellfree/cmd/: all.py  cellfree.py  end_motif.py  frag_length.py  motifs.py  prepare.py  split.py  tsv.py
cellfree/molecule/: __init__.py  cyclomics.py  iterator.py  molecule.py
cellfree/plot/: plot_copy_number.py  plot_end_motifs.py  plot_lengths.py
cellfree/prepare/: prepare_bam.py
cellfree/read_unit/: __init__.py  chic.py  read_unit.py
cellfree/utils/: pyutils.py
data/: circular.tagged.dedup.sorted.bam  circular.tagged.dedup.sorted.bam.bai  circular.tagged.sorted.bam  circular.tagged.sorted.bam.bai  mini_ref_genome.fa.bwt  mini_ref_genome.fa.fai  mini_ref_genome.fa.pac
docs/: README.md  conf.py  index.rst  requirements.txt  roadmap.md
docs/source/: contributing.md
singlecellmultiomics/FACS/: trajectory.py
singlecellmultiomics/bamProcessing/: alignment_view.py  bamAnalyzeCutDistances.py  bamDinucleotideDistribution.py  bamExtractNearMolecules.py  bamExtractSamples.py  bamExtractVariants.py  bamFeatureDensityVisualisation.py  bamFilter.py  bamMatchGATKBQSRReport.py  bamMutProfiler.py  bamPlateVisualisation.py  bamReadGroupFormat.py  bamSetReadGroup.py  bamToBigWig.py  bamToCountTable.py  estimateTapsConversionEfficiency.py  scmoConvert.py  split_bam_by_cluster.py  split_double_BAM.py  variantStats.py
singlecellmultiomics/countTableProcessing/: correct_count_table_bias.py
singlecellmultiomics/fastaProcessing/: __init__.py  fastaCreateDict.py  fastaHandle.py
singlecellmultiomics/fastqProcessing/: trim_vasa.py
singlecellmultiomics/features/: exonGTFtoIntronGTF.py  features.py
singlecellmultiomics/fragment/: __init__.py  fragment.py  scartrace.py
singlecellmultiomics/libraryDetection/: archivestats.py  sequencingLibraryListing.py
singlecellmultiomics/libraryProcessing/: scsortchicfeaturedensitytable.py  scsortchicqc.py  scsortchicstats.py
singlecellmultiomics/methylation/: __init__.py  methylationtab_to_bed.py
singlecellmultiomics/modularDemultiplexer/: baseDemultiplexMethods.py  demultiplexedFastqConversion.py  demultiplexingStrategyLoader.py  demux.py
singlecellmultiomics/molecule/: __init__.py  chic.py  consensus.py  iterator.py  nlaIII.py  rna.py  scartrace.py
singlecellmultiomics/pyutils/: pyutils.py
singlecellmultiomics/snakemake_workflows/: scmo_workflow.py
singlecellmultiomics/statistic/: __init__.py  allele.py  conversions.py  datatype.py  lorenz.py  mappingquality.py  methylation.py  plate2.py  rejectionreasons.py  scchicligation.py  statistic.py
singlecellmultiomics/universalBamTagger/: 4SUtagger.py  __init__.py  bamtagmultiome.py  mspjI.py  scchic.py  tag.py  tapsTabulator.py  universalBamTagger.py
singlecellmultiomics/utils/: base_call_covariates.py  bdbplot.py  export.py  lda.py  pandas.py  plotting.py  (+1 more)
tasks/: build.py  common.py  test.py
tests/: test_cellfree.py  test_tagger.py
(+155 files in other folders)
