[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"


[tool.pylint]
    [tool.pylint.messages_control]
    disable = [
        "bad-continuation",
        "missing-function-docstring",
        "missing-module-docstring",
        "invalid-name"
    ]

    [tool.pylint.format]
    max-line-length = 88


[tool.mypy]
files = [
    "cellfree",
    "tests"
]
exclude = 'read_unit.py'
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true



[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv"
]


[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        'env/*',
        'venv/*',
        '*/virtualenv/*',
        '*/virtualenvs/*',
        '*/tests/*'
    ]

[tool.poetry]
name = "cellfree"
version = "0.1.0"
authors = ["Liting Chen <litingchen16@gmail.com>"]
description = "A cell free DNA analysis suite"
license = "GNU General Public License v3"
readme = "docs/README.md"
repository = "https://github.com/zztin/cellfree"
packages = [
       { include = "cellfree" },
       { include = "singlecellmultiomics_ng" },
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.1"
click = "8.0.*"
scipy = "^1.8.0"
pysam = "^0.19.0"
numpy = "^1.22.3"
singlecellmultiomics = "^0.1.26"
pysamiterators = "^1.9"
more-itertools = "^8.12.0"
biopython = "^1.79"
pandas = "^1.4.2"
seaborn = "^0.11.2"
pyBigWig = "^0.3.18"
statsmodels = "^0.13.2"
sklearn = "^0.0"
cached-property = "^1.5.2"
cyvcf2 = "^0.30.18"

[tool.poetry.dev-dependencies]
# task management
invoke = "^1.4.1"
# test
pytest = "^6.0.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
pytest-xdist = "^1.31.0"
hypothesis = "^5.8.0"
coverage = {extras = ["toml"], version = "^5.0.4"}
# style
flake8 = "^3.7.9"
pylint = "^2.7.0"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.0.0"
# security
bandit = "^1.6.2"
safety = "^1.8.7"
# git
commitizen = "^2.4.0"
pre-commit = "^2.2.0"
# documentation
mkdocs = "^1.1"
mkdocs-material = "^7.0.6"
Sphinx = "^4.5.0"
myst-parser = "^0.17.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
cellfree = "cellfree.cmd.cellfree:main"
